--- a/.github/workflows/bygg-og-deploy-master.yml
+++ b/.github/workflows/bygg-og-deploy-master.yml
@@ -54,8 +54,8 @@ jobs:
           echo $GITHUB_TOKEN | docker login docker.pkg.github.com -u $GITHUB_REPOSITORY --password-stdin
           docker push $IMAGE_BASE
 
-  deploy-dev:
-    name: Deploy til dev
+  deploy-dev-fss:
+    name: Deploy til dev-fss
     runs-on: ubuntu-latest
     needs: bygg
     steps:
@@ -71,10 +71,27 @@ jobs:
           PRINT_PAYLOAD: true
           VARS: nais/dev-fss.json
 
-  deploy-prod:
-    name: Deploy til prod
+  deploy-dev-sbs:
+    name: Deploy til dev-sbs
     runs-on: ubuntu-latest
-    needs: deploy-dev
+    needs: bygg
+    steps:
+      - name: Sjekk ut kode
+        uses: actions/checkout@v2
+
+      - name: Deploy til dev-sbs
+        uses: nais/deploy/actions/deploy@v1
+        env:
+          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
+          CLUSTER: dev-sbs
+          RESOURCE: naiserator.yaml
+          PRINT_PAYLOAD: true
+          VARS: nais/dev-sbs.json
+
+  deploy-prod-fss:
+    name: Deploy til prod-fss
+    runs-on: ubuntu-latest
+    needs: bygg
     steps:
       - name: Sjekk ut kode
         uses: actions/checkout@v2
@@ -87,3 +104,20 @@ jobs:
           RESOURCE: naiserator.yaml
           PRINT_PAYLOAD: true
           VARS: nais/prod-fss.json
+
+  deploy-prod-sbs:
+    name: Deploy til prod-sbs
+    runs-on: ubuntu-latest
+    needs: bygg
+    steps:
+      - name: Sjekk ut kode
+        uses: actions/checkout@v2
+
+      - name: Deploy til prod-sbs
+        uses: nais/deploy/actions/deploy@v1
+        env:
+          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
+          CLUSTER: prod-sbs
+          RESOURCE: naiserator.yaml
+          PRINT_PAYLOAD: true
+          VARS: nais/prod-sbs.json
