Fjerner Heroku-konfigurasjon som ikke er nødvendig

--- a/app.json
+++ b/app.json
@@ -1,24 +1,13 @@
 {
-    "addons": [],
     "buildpacks": [
         {
             "url": "heroku/nodejs"
         }
     ],
-    "env": {
-        "REACT_APP_MOCK": {
-            "value": "true"
-        },
-        "ENABLE_EXTERNAL_MENU": {
-            "value": "false"
-        }
-    },
     "formation": {
         "web": {
             "quantity": 1
         }
     },
-    "name": "tiltaksgjennomforing",
-    "scripts": {},
-    "stack": "heroku-18"
+    "name": "tiltaksgjennomforing"
 }
