Tar inn igjen REACT_APP_MOCK i app.json

--- a/app.json
+++ b/app.json
@@ -4,6 +4,11 @@
             "url": "heroku/nodejs"
         }
     ],
+    "env": {
+        "REACT_APP_MOCK": {
+            "value": "true"
+        }
+    },
     "formation": {
         "web": {
             "quantity": 1
