Sletter webpack plugin. Gjør heller meny-injisering i headerFooterDecorator.js, som kalles fra setupProxy.js, slik at både npm start og npm run server gjøres dekorering på samme måte.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "scripts": {
         "build": "cross-env GIT_COMMIT_HASH=$(git log -n 1 --pretty=format:'%h') craco build",
         "mock": "cross-env REACT_APP_MOCK=true npm start",
-        "heroku": "node heroku.js",
         "server": "node server.js",
         "start": "craco start",
         "start-ekstern": "cross-env ENABLE_EXTERNAL_MENU=true craco start",
@@ -25,11 +24,11 @@
         "classnames": "^2.2.6",
         "event-stream": "^4.0.1",
         "express": "^4.17.1",
-        "fs-extra": "^8.1.0",
         "html-webpack-plugin": "^3.2.0",
         "intl": "^1.2.5",
         "lodash.throttle": "^4.1.1",
         "moment": "^2.24.0",
+        "nan": "^2.14.0",
         "nav-frontend-alertstriper": "3.0.3",
         "nav-frontend-alertstriper-style": "2.0.2",
         "nav-frontend-chevron": "^1.0.9",
@@ -72,7 +71,8 @@
         "nav-frontend-veileder-style": "^2.0.10",
         "nav-frontend-veilederpanel": "^0.1.18",
         "nav-frontend-veilederpanel-style": "^0.0.21",
-        "node-cache": "4.2.0",
+        "node-cache": "5.1.0",
+        "node-fetch": "^2.6.0",
         "prop-types": "^15.7.2",
         "react": "^16.12.0",
         "react-app-polyfill": "^0.2.1",
