Installerer dependencies som hører til frontend-backend

--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
         "classnames": "^2.2.6",
         "event-stream": "^4.0.1",
         "express": "^4.17.1",
-        "html-webpack-plugin": "^3.2.0",
+        "helmet": "^3.21.3",
+        "http-proxy-middleware": "^0.21.0",
         "intl": "^1.2.5",
+        "jsdom": "^16.2.0",
         "lodash.throttle": "^4.1.1",
         "moment": "^2.24.0",
         "nan": "^2.14.0",
@@ -71,7 +73,7 @@
         "nav-frontend-veileder-style": "^2.0.10",
         "nav-frontend-veilederpanel": "^0.1.18",
         "nav-frontend-veilederpanel-style": "^0.0.21",
-        "node-cache": "5.1.0",
+        "node-cache": "^5.1.0",
         "node-fetch": "^2.6.0",
         "prop-types": "^15.7.2",
         "react": "^16.12.0",
@@ -88,6 +90,7 @@
         "react-motion": "^0.5.2",
         "react-responsive": "^8.0.3",
         "react-router-dom": "^5.1.2",
+        "request": "^2.88.2",
         "url-search-params-polyfill": "^7.0.1"
     },
     "devDependencies": {
@@ -117,7 +120,6 @@
         "enzyme-react-intl": "^2.0.6",
         "fetch-mock": "^7.7.3",
         "glob": "^7.1.5",
-        "http-proxy-middleware": "^0.19.1",
         "husky": "^3.1.0",
         "less": "^3.8.1",
         "less-watch-compiler": "^1.13.0",
