--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "scripts": {
         "build": "cross-env GIT_COMMIT_HASH=$(git log -n 1 --pretty=format:'%h') craco build",
         "mock": "cross-env REACT_APP_MOCK=true npm start",
-        "heroku": "node heroku.js",
         "server": "node server.js",
         "start": "craco start",
         "start-ekstern": "cross-env ENABLE_EXTERNAL_MENU=true craco start",
@@ -26,6 +25,7 @@
         "event-stream": "^4.0.1",
         "express": "^4.17.1",
         "fs-extra": "^8.1.0",
+        "helmet": "^3.21.3",
         "html-webpack-plugin": "^3.2.0",
         "intl": "^1.2.5",
         "lodash.throttle": "^4.1.1",
@@ -117,7 +117,7 @@
         "enzyme-react-intl": "^2.0.6",
         "fetch-mock": "^7.7.3",
         "glob": "^7.1.5",
-        "http-proxy-middleware": "^0.19.1",
+        "http-proxy-middleware": "^0.21.0",
         "husky": "^3.1.0",
         "less": "^3.8.1",
         "less-watch-compiler": "^1.13.0",
