--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "helmet": "^3.21.3",
         "html-webpack-plugin": "^3.2.0",
         "intl": "^1.2.5",
+        "jsdom": "^16.2.0",
         "lodash.throttle": "^4.1.1",
         "moment": "^2.24.0",
         "nav-frontend-alertstriper": "3.0.3",
