--- a/.github/stale.yml
+++ b/.github/stale.yml
@@ -16,3 +16,5 @@ markComment: >
 # Comment to post when closing a stale issue. Set to `false` to disable
 closeComment: >
   Denne PR-en har nå blitt lukket pga. inaktivitet. Du kan fortsatt reåpne den.
+# Limit to only `issues` or `pulls`
+only: pulls
