Fiks hoved- og review-apps på Heroku (#295)
* Boolean på miljøvariabel, forenkler håndteringen av denne. Og endrer navn på endepunkt.

* Fjerner Heroku-konfigurasjon som ikke er nødvendig

* Tar inn igjen REACT_APP_MOCK i app.json

* Sletter heroku.js

* Ny env for om det er på heroku

* Installerer dep

* Samkjører dep i package.json og dockerfile

* Flytter fra devDep til dep

* Redirecter fra rot på Heroku

* Snur sjekk for enabled external

--- a/app.json
+++ b/app.json
@@ -1,5 +1,4 @@
 {
-    "addons": [],
     "buildpacks": [
         {
             "url": "heroku/nodejs"
@@ -9,8 +8,8 @@
         "REACT_APP_MOCK": {
             "value": "true"
         },
-        "ENABLE_EXTERNAL_MENU": {
-            "value": "false"
+        "REACT_APP_ON_HEROKU": {
+            "value": "true"
         }
     },
     "formation": {
@@ -18,7 +17,5 @@
             "quantity": 1
         }
     },
-    "name": "tiltaksgjennomforing",
-    "scripts": {},
-    "stack": "heroku-18"
+    "name": "tiltaksgjennomforing"
 }
