--- a/package.json
+++ b/package.json
@@ -6,10 +6,9 @@
     "scripts": {
         "build": "cross-env GIT_COMMIT_HASH=$(git log -n 1 --pretty=format:'%h') craco build",
         "mock": "cross-env REACT_APP_MOCK=true npm start",
-        "heroku": "node heroku.js",
         "server": "node server.js",
         "start": "craco start",
-        "start-ekstern": "cross-env ENABLE_EXTERNAL_MENU=\"enable\" craco start",
+        "start-ekstern": "cross-env ENABLE_EXTERNAL_MENU=true craco start",
         "test": "cross-env CI=true craco test -w 1",
         "test:config": "node -e 'console.dir(require(\"./jest.config.js\"))'",
         "test:help": "craco test --help",
@@ -26,8 +25,11 @@
         "event-stream": "^4.0.1",
         "express": "^4.17.1",
         "fs-extra": "^8.1.0",
+        "helmet": "^3.21.3",
         "html-webpack-plugin": "^3.2.0",
+        "http-proxy-middleware": "^0.21.0",
         "intl": "^1.2.5",
+        "jsdom": "^16.2.0",
         "lodash.throttle": "^4.1.1",
         "moment": "^2.24.0",
         "nav-frontend-alertstriper": "3.0.3",
@@ -88,6 +90,7 @@
         "react-motion": "^0.5.2",
         "react-responsive": "^8.0.3",
         "react-router-dom": "^5.1.2",
+        "request": "^2.88.2",
         "url-search-params-polyfill": "^7.0.1"
     },
     "devDependencies": {
@@ -117,7 +120,6 @@
         "enzyme-react-intl": "^2.0.6",
         "fetch-mock": "^7.7.3",
         "glob": "^7.1.5",
-        "http-proxy-middleware": "^0.19.1",
         "husky": "^3.1.0",
         "less": "^3.8.1",
         "less-watch-compiler": "^1.13.0",
