--- a/package.json
+++ b/package.json
@@ -123,6 +123,7 @@
         "enzyme-react-intl": "^2.0.6",
         "fetch-mock": "^7.7.3",
         "glob": "^7.1.5",
+        "http-proxy-middleware": "^0.19.1",
         "husky": "^3.1.0",
         "less": "^3.8.1",
         "less-watch-compiler": "^1.13.0",
