--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
         "fs-extra": "^8.1.0",
         "helmet": "^3.21.3",
         "html-webpack-plugin": "^3.2.0",
-        "http-proxy-middleware": "^0.21.0",
+        "http-proxy-middleware": "0.21.0",
         "intl": "^1.2.5",
         "jsdom": "^16.2.0",
         "lodash.throttle": "^4.1.1",
