--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "scripts": {
         "build": "cross-env GIT_COMMIT_HASH=$(git log -n 1 --pretty=format:'%h') craco build",
         "mock": "cross-env REACT_APP_MOCK=true npm start",
+        "heroku": "node heroku.js",
         "server": "node server.js",
         "start": "craco start",
         "start-ekstern": "cross-env ENABLE_EXTERNAL_MENU=true craco start",
+        "start-intern": "cross-env process.env.ENABLE_INTERNAL_MENU=true craco start",
         "test": "cross-env CI=true craco test -w 1",
         "test:config": "node -e 'console.dir(require(\"./jest.config.js\"))'",
         "test:help": "craco test --help",
@@ -16,6 +18,7 @@
     },
     "dependencies": {
         "@navikt/fnrvalidator": "^1.1.0",
+        "@navikt/navspa": "^1.0.3",
         "@sentry/browser": "^5.7.1",
         "@types/amplitude-js": "^4.4.4",
         "amplitude-js": "^5.6.0",
@@ -27,7 +30,6 @@
         "fs-extra": "^8.1.0",
         "helmet": "^3.21.3",
         "html-webpack-plugin": "^3.2.0",
-        "http-proxy-middleware": "^0.21.0",
         "intl": "^1.2.5",
         "jsdom": "^16.2.0",
         "lodash.throttle": "^4.1.1",
@@ -120,6 +122,7 @@
         "enzyme-react-intl": "^2.0.6",
         "fetch-mock": "^7.7.3",
         "glob": "^7.1.5",
+        "http-proxy-middleware": "^0.21.0",
         "husky": "^3.1.0",
         "less": "^3.8.1",
         "less-watch-compiler": "^1.13.0",
