--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
         "url-search-params-polyfill": "^7.0.1"
     },
     "devDependencies": {
+        "@babel/plugin-proposal-private-methods": "^7.10.4",
         "@craco/craco": "^5.6.1",
         "@types/chai": "^4.2.4",
         "@types/classnames": "^2.2.7",
