Byttet datovelger og gjort tilbake i tid disablet Co-authored-by: Mats Bolstad <mats.bolstad@nav.no> Co-authored-by: Bjarte Tynning <bjarte.tynning@nav.no>

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "jsdom": "^16.2.0",
         "lodash.throttle": "^4.1.1",
         "moment": "^2.24.0",
+        "nav-datovelger": "^6.1.9",
         "nav-frontend-alertstriper": "3.0.3",
         "nav-frontend-alertstriper-style": "2.0.2",
         "nav-frontend-chevron": "^1.0.9",
