--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
         "nav-frontend-hjelpetekst-style": "^0.3.34",
         "nav-frontend-ikoner-assets": "^1.0.3",
         "nav-frontend-ikonknapper": "0.0.10",
-        "nav-frontend-js-utils": "^1.0.8",
+        "nav-frontend-js-utils": "^1.0.9",
         "nav-frontend-knapper": "^1.0.37",
         "nav-frontend-knapper-style": "^0.3.32",
         "nav-frontend-lenkepanel": "^1.0.34",
@@ -64,6 +64,8 @@
         "nav-frontend-modal-style": "^0.3.31",
         "nav-frontend-paneler": "^1.0.21",
         "nav-frontend-paneler-style": "^0.3.17",
+        "nav-frontend-popover": "0.0.28",
+        "nav-frontend-popover-style": "0.0.5",
         "nav-frontend-skjema": "^1.0.78",
         "nav-frontend-skjema-style": "^1.0.48",
         "nav-frontend-spinner": "^1.0.20",
