viser hendelselogg i modal

--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
         "nav-frontend-alertstriper-style": "2.0.2",
         "nav-frontend-chevron": "^1.0.9",
         "nav-frontend-chevron-style": "^0.3.5",
-        "nav-frontend-core": "^4.0.11",
+        "nav-frontend-core": "^4.0.13",
         "nav-frontend-ekspanderbartpanel": "^1.0.35",
         "nav-frontend-ekspanderbartpanel-style": "^0.3.23",
         "nav-frontend-etiketter": "^1.0.28",
@@ -72,6 +72,7 @@
         "nav-frontend-spinner-style": "^0.2.5",
         "nav-frontend-stegindikator": "0.0.36",
         "nav-frontend-stegindikator-style": "^1.0.25",
+        "nav-frontend-tabell-style": "^0.2.23",
         "nav-frontend-tabs": "0.0.36",
         "nav-frontend-tabs-style": "0.0.22",
         "nav-frontend-typografi": "^2.0.17",
