--- a/package.json
+++ b/package.json
@@ -148,7 +148,7 @@
     ],
     "husky": {
         "hooks": {
-            "pre-commit": "pretty-quick --staged --pattern \"**/*.*(js|json|jsx|ts|tsx|css|scss|less)\""
+            "pre-commit": "pretty-quick --staged --pattern \"**/*.*(js|json|jsx|ts|tsx|css|scss|less)\" && sh ./svgo.sh"
         }
     }
 }
