Outbound rule til api

--- a/naiserator.yaml
+++ b/naiserator.yaml
@@ -38,3 +38,9 @@ spec:
           value: '{{{decorator-external-script}}}'
         - name: DECORATOR_INTERNAL_STYLING
           value: '{{{decorator-external-styling}}}'
+    {{#if labs}}
+    accessPolicy:
+      outbound:
+        rules:
+          - application: tiltaksgjennomforing-api
+    {{/if}}
