--- a/package.json
+++ b/package.json
@@ -134,6 +134,7 @@
         "prettier": "^1.19.1",
         "pretty-quick": "^2.0.1",
         "react-scripts": "^3.4.3",
+        "svgo": "^1.3.2",
         "tslint": "^5.20.1",
         "tslint-config-prettier": "^1.18.0",
         "tslint-react": "^4.1.0",
