--- a/package.json
+++ b/package.json
@@ -135,6 +135,7 @@
         "prettier": "^1.19.1",
         "pretty-quick": "^2.0.1",
         "react-scripts": "^3.4.3",
+        "svgo": "^1.3.2",
         "tslint": "^5.20.1",
         "tslint-config-prettier": "^1.18.0",
         "tslint-react": "^4.1.0",
@@ -149,7 +150,7 @@
     ],
     "husky": {
         "hooks": {
-            "pre-commit": "pretty-quick --staged --pattern \"**/*.*(js|json|jsx|ts|tsx|css|scss|less)\""
+            "pre-commit": "pretty-quick --staged --pattern \"**/*.*(js|json|jsx|ts|tsx|css|scss|less)\" && sh ./svgo.sh"
         }
     }
 }
