--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@navikt/navspa": "^1.0.3",
         "@sentry/browser": "^5.7.1",
         "@types/amplitude-js": "^4.4.4",
+        "@types/lodash.debounce": "^4.0.6",
         "amplitude-js": "^5.6.0",
         "babel-polyfill": "^6.26.0",
         "babel-runtime": "^6.26.0",
@@ -34,6 +35,7 @@
         "http-proxy-middleware": "^0.21.0",
         "intl": "^1.2.5",
         "jsdom": "^16.4.0",
+        "lodash.debounce": "^4.0.8",
         "lodash.throttle": "^4.1.1",
         "moment": "^2.24.0",
         "nav-datovelger": "^6.1.10",
