--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@sentry/browser": "^5.7.1",
         "@types/amplitude-js": "^4.4.4",
         "@types/lodash.debounce": "^4.0.6",
+        "@types/react-modal": "^3.10.6",
         "amplitude-js": "^5.6.0",
         "babel-polyfill": "^6.26.0",
         "babel-runtime": "^6.26.0",
@@ -96,7 +97,7 @@
         "react-intl": "^2.8.0",
         "react-loading-skeleton": "^2.1.1",
         "react-maskedinput": "^4.0.1",
-        "react-modal": "^3.11.1",
+        "react-modal": "^3.11.2",
         "react-motion": "^0.5.2",
         "react-responsive": "^8.0.3",
         "react-router-dom": "^5.1.2",
