--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     },
     "devDependencies": {
         "@craco/craco": "^5.6.1",
+        "@sentry/webpack-plugin": "^1.14.0",
         "@types/chai": "^4.2.4",
         "@types/classnames": "^2.2.7",
         "@types/enzyme": "^3.10.3",
