Lagt til sentry token i actions miljovariabler Co-authored-by: Mats Bolstad <mats.bolstad@nav.no> Co-authored-by: Håvard Myrvold Johannessen <havard.myrvold.johannessen@nav.no>

--- a/.github/workflows/bygg-branch.yml
+++ b/.github/workflows/bygg-branch.yml
@@ -8,6 +8,7 @@ on:
 
 env:
   IMAGE_BASE: docker.pkg.github.com/${{ github.repository }}/tiltaksgjennomforing
+  SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
 
 jobs:
   bygg:
