--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "sourceMap": true,
     "inlineSources": true,
-    "sourceRoot": "src",
+    "sourceRoot": "./src",
     "target": "es5",
     "lib": [
       "dom",
