endrer includePather i tsconfig og webpackplugin og sjekk pa miljo Co-authored-by: Mats Bolstad <mats.bolstad@nav.no> Co-authored-by: Håvard Myrvold Johannessen <havard.myrvold.johannessen@nav.no>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "sourceMap": true,
     "inlineSources": true,
-    "sourceRoot": "./src",
+    "sourceRoot": "/",
     "target": "es5",
     "lib": [
       "dom",
