lagt til sentry release og sourcemaps via sentry-cli

--- a/.github/workflows/bygg-branch.yml
+++ b/.github/workflows/bygg-branch.yml
@@ -29,6 +29,9 @@ jobs:
       - name: Bygg (npm run build)
         run: npm run build
 
+      - name: Sett opp sentry release
+        run: npm run release
+
       - name: Sjekk om branch er oppdatert mot master
         id: sjekk-mot-master
         run: |
