--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "homepage": "/tiltaksgjennomforing",
     "scripts": {
         "build": "cross-env GIT_COMMIT_HASH=$(git log -n 1 --pretty=format:'%h') craco build",
-        "release": "node sentry.js",
+        "release": "cross-env GIT_COMMIT_HASH=$(git log -n 1 --pretty=format:'%h') node sentry.js",
         "mock": "cross-env REACT_APP_MOCK=true npm start",
         "heroku": "node heroku.js",
         "server": "node server.js",
