--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@sentry/react": "^5.27.6",
         "@types/amplitude-js": "^4.4.4",
         "@types/lodash.debounce": "^4.0.6",
+        "@types/react-helmet": "^6.1.0",
         "@types/react-modal": "^3.10.6",
         "amplitude-js": "^5.6.0",
         "babel-polyfill": "^6.26.0",
@@ -95,6 +96,7 @@
         "react-copy-to-clipboard": "^5.0.1",
         "react-day-picker": "^7.4.0",
         "react-dom": "^16.13.1",
+        "react-helmet": "^6.1.0",
         "react-intl": "^2.8.0",
         "react-loading-skeleton": "^2.1.1",
         "react-maskedinput": "^4.0.1",
