--- a/.github/workflows/bygg-branch.yml
+++ b/.github/workflows/bygg-branch.yml
@@ -7,7 +7,7 @@ on:
       - '!master'
 
 env:
-  IMAGE_BASE: docker.pkg.github.com/${{ github.repository }}/tiltaksgjennomforing
+  IMAGE: ghcr.io/${{ github.repository }}:${{ github.sha }}
   SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
 
 jobs:
@@ -45,11 +45,10 @@ jobs:
           echo ::set-output name=branch::"$(echo ${GITHUB_REF#refs/heads/})"
 
       - name: Bygg, tag og push Docker-image
-        if: steps.sjekk-mot-master.outputs.oppdatert == 'ja'
         run: |
-          docker build --tag $IMAGE_BASE:$GITHUB_SHA .
-          echo ${{ secrets.GITHUB_TOKEN }} | docker login docker.pkg.github.com -u $GITHUB_REPOSITORY --password-stdin
-          docker push $IMAGE_BASE
+          docker build --tag $IMAGE .
+          echo ${{ secrets.GHCR_PUSH_TOKEN }} | docker login ghcr.io -u ${{ secrets.GHCR_PUSH_USERNAME }} --password-stdin
+          docker push $IMAGE
 
       - name: Lukk gamle deployment-issues
         if: steps.sjekk-mot-master.outputs.oppdatert == 'ja'
