korrigering av docker image oppretting

--- a/.github/workflows/deploy-branch.yml
+++ b/.github/workflows/deploy-branch.yml
@@ -3,7 +3,7 @@ on:
   repository_dispatch:
     types: [deploy-command]
 env:
-  IMAGE: ghcr.io/${{ github.repository }}:${{ github.sha }}
+  IMAGE_BASE: ghcr.io/${{ github.repository }}
   SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
       
 jobs:
@@ -37,6 +37,9 @@ jobs:
         run: |
           git fetch origin master
           git merge-base --is-ancestor origin/master $COMMIT
+
+      - name: Sett miljøvariabel IMAGE
+        run: echo "IMAGE=$IMAGE_BASE:$COMMIT" >> $GITHUB_ENV
 
       - name: Deploy til dev-sbs
         uses: nais/deploy/actions/deploy@v1
