rettet på url til kontonummeroppslag

--- a/.github/workflows/deploy-branch.yml
+++ b/.github/workflows/deploy-branch.yml
@@ -51,7 +51,7 @@ jobs:
           PRINT_PAYLOAD: true
           VARS: nais/dev-sbs.json
           REF: ${{ env.COMMIT }}
-          IMAGE: ${{ IMAGE }}
+          IMAGE: ${{ env.IMAGE }}
 
       - name: Deploy til dev-fss
         uses: nais/deploy/actions/deploy@v1
@@ -63,7 +63,7 @@ jobs:
           PRINT_PAYLOAD: true
           VARS: nais/dev-fss.json
           REF: ${{ env.COMMIT }}
-          IMAGE: ${{ IMAGE }}
+          IMAGE: ${{ env.IMAGE }}
           
       - name: Oppdater kommentar med deployment status ved feil
         if: failure()
