--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
         "nav-frontend-veilederpanel": "^0.1.18",
         "nav-frontend-veilederpanel-style": "^0.0.21",
         "node-cache": "4.2.0",
+        "node-fetch": "2.6.1",
         "prop-types": "^15.7.2",
         "react": "^16.14.0",
         "react-app-polyfill": "^0.2.1",
