Lagt til external outbound host for tiltak-fakelogin i labs
Co-authored-by: Sindre Løken <sindre.loken@nav.no>
Co-authored-by: Håvard Myrvold Johannessen <havard.myrvold.johannessen@nav.no>
Co-authored-by: Mats Bolstad <mats.bolstad@nav.no>

--- a/naiserator.yaml
+++ b/naiserator.yaml
@@ -41,6 +41,8 @@ spec:
     {{#if labs}}
     accessPolicy:
       outbound:
+        external:
+          - host: https://tiltak-fakelogin.labs.nais.io
         rules:
           - application: tiltaksgjennomforing-api
     {{/if}}
