--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@types/lodash.debounce": "^4.0.6",
         "@types/react-modal": "^3.10.6",
         "amplitude-js": "^5.6.0",
+        "axios": "^0.21.1",
         "babel-polyfill": "^6.26.0",
         "babel-runtime": "^6.26.0",
         "classnames": "^2.2.6",
