--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@types/react-modal": "^3.10.6",
         "amplitude-js": "^5.6.0",
         "axios": "^0.21.1",
+        "axios-retry": "^3.1.9",
         "babel-polyfill": "^6.26.0",
         "babel-runtime": "^6.26.0",
         "classnames": "^2.2.6",
