--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     },
     "dependencies": {
         "@navikt/bedriftsmeny": "^2.2.5",
+        "@navikt/ds-icons": "^0.1.6",
         "@navikt/fnrvalidator": "^1.1.3",
         "@navikt/navspa": "^3.0.0",
         "@sentry/react": "^5.27.6",
