--- a/package.json
+++ b/package.json
@@ -162,5 +162,10 @@
         "hooks": {
             "pre-commit": "pretty-quick --staged --pattern \"**/*.*(js|json|jsx|ts|tsx|css|scss|less)\" && sh ./svgo.sh"
         }
+    },
+    "jest": {
+        "transformIgnorePatterns": [
+            "<rootDir>/node_modules/(?!@navikt/.*|nav-frontend-.*|nav-datovelger)"
+        ]
     }
 }
