--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
         "up": "docker-compose up -d --remove-orphans --build"
     },
     "dependencies": {
-        "@navikt/bedriftsmeny": "^3.0.3",
+        "@navikt/bedriftsmeny": "^3.0.6",
         "@navikt/ds-icons": "^0.2.2",
         "@navikt/fnrvalidator": "^1.1.3",
         "@navikt/navspa": "^3.0.0",
@@ -145,7 +145,7 @@
         "prettier": "^1.19.1",
         "pretty-quick": "^2.0.1",
         "react-scripts": "^3.4.3",
-        "svgo": "^1.3.2",
+        "svgo": "1.3.2",
         "tslint": "^5.20.1",
         "tslint-config-prettier": "^1.18.0",
         "tslint-react": "^4.1.0",
