--- a/naiserator.yaml
+++ b/naiserator.yaml
@@ -38,6 +38,8 @@ spec:
           value: '{{{decorator-external-script}}}'
         - name: DECORATOR_INTERNAL_STYLING
           value: '{{{decorator-external-styling}}}'
+        - name: STILLINGSTITLER_URL
+          value: '{{{stillingstitler-url}}}'
     {{#if labs}}
     accessPolicy:
       outbound:
