endret til yarn i workflow filer Co-authored-by: Mats Bolstad <mats.bolstad@nav.no>

--- a/.github/workflows/bygg-branch.yml
+++ b/.github/workflows/bygg-branch.yml
@@ -20,17 +20,17 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Installer avhengigheter (npm ci)
-        run: npm ci --no-optional
+      - name: Installer avhengigheter
+        run: yarn install --frozen-lockfile
 
-      - name: Kjør tester (npm test)
-        run: npm test
+      - name: Kjør tester
+        run: yarn test
 
-      - name: Bygg (npm run build)
-        run: npm run build
+      - name: Bygg
+        run: yarn run build
 
       - name: Sett opp sentry release
-        run: npm run release
+        run: yarn run release
 
       - name: Sjekk om branch er oppdatert mot master
         id: sjekk-mot-master
