--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@types/amplitude-js": "^8.0.1",
         "@types/lodash.debounce": "^4.0.6",
         "@types/react-modal": "^3.12.1",
+        "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
         "amplitude-js": "^8.5.0",
         "axios": "^0.21.1",
         "axios-retry": "^3.1.9",
