--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "up": "docker-compose up -d --remove-orphans --build"
     },
     "dependencies": {
+        "@formatjs/intl-pluralrules": "^4.1.3",
         "@navikt/bedriftsmeny": "^3.2.0",
         "@navikt/ds-icons": "^0.5.2",
         "@navikt/fnrvalidator": "^1.1.4",
