--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     },
     "dependencies": {
         "@formatjs/intl-pluralrules": "^4.1.3",
+        "@formatjs/intl-relativetimeformat": "^9.2.3",
         "@navikt/bedriftsmeny": "^3.2.0",
         "@navikt/ds-icons": "^0.5.2",
         "@navikt/fnrvalidator": "^1.1.4",
