--- a/package.json
+++ b/package.json
@@ -18,139 +18,137 @@
         "up": "docker-compose up -d --remove-orphans --build"
     },
     "dependencies": {
-        "@navikt/bedriftsmeny": "^3.0.6",
-        "@navikt/ds-icons": "^0.2.2",
-        "@navikt/fnrvalidator": "^1.1.3",
-        "@navikt/navspa": "^3.0.0",
-        "@sentry/react": "^5.27.6",
-        "@types/amplitude-js": "^4.4.4",
+        "@formatjs/intl-pluralrules": "^4.1.3",
+        "@formatjs/intl-relativetimeformat": "^9.2.3",
+        "@navikt/bedriftsmeny": "^3.2.0",
+        "@navikt/ds-icons": "^0.5.2",
+        "@navikt/fnrvalidator": "^1.1.4",
+        "@navikt/navspa": "^3.0.2",
+        "@sentry/react": "^6.11.0",
+        "@types/amplitude-js": "^8.0.1",
         "@types/lodash.debounce": "^4.0.6",
-        "@types/react-modal": "^3.10.6",
-        "amplitude-js": "^5.6.0",
+        "@types/react-modal": "^3.12.1",
+        "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
+        "amplitude-js": "^8.5.0",
         "axios": "^0.21.1",
         "axios-retry": "^3.1.9",
         "babel-polyfill": "^6.26.0",
         "babel-runtime": "^6.26.0",
-        "classnames": "^2.2.6",
+        "classnames": "^2.3.1",
+        "dayjs": "^1.10.6",
         "event-stream": "^4.0.1",
         "express": "^4.17.1",
-        "fs-extra": "^8.1.0",
-        "helmet": "^3.21.3",
-        "html-webpack-plugin": "^3.2.0",
-        "http-proxy-middleware": "^0.21.0",
+        "fs-extra": "^10.0.0",
+        "helmet": "^4.6.0",
+        "html-webpack-plugin": "^5.3.2",
+        "http-proxy-middleware": "^2.0.1",
         "intl": "^1.2.5",
-        "jsdom": "^16.4.0",
+        "jsdom": "^17.0.0",
         "lodash.debounce": "^4.0.8",
         "lodash.throttle": "^4.1.1",
-        "moment": "^2.24.0",
-        "nav-datovelger": "^6.1.10",
-        "nav-frontend-alertstriper": "^3.0.23",
-        "nav-frontend-alertstriper-style": "^2.0.17",
-        "nav-frontend-chevron": "^1.0.25",
-        "nav-frontend-chevron-style": "^0.3.5",
-        "nav-frontend-core": "^4.0.13",
-        "nav-frontend-ekspanderbartpanel": "^3.0.37",
-        "nav-frontend-ekspanderbartpanel-style": "^0.3.23",
-        "nav-frontend-etiketter": "^2.0.21",
-        "nav-frontend-etiketter-style": "^1.0.14",
-        "nav-frontend-grid": "^1.0.23",
-        "nav-frontend-grid-style": "^0.2.18",
-        "nav-frontend-hjelpetekst": "^2.0.47",
-        "nav-frontend-hjelpetekst-style": "^2.0.36",
-        "nav-frontend-ikoner-assets": "^1.0.5",
-        "nav-frontend-ikonknapper": "0.0.10",
-        "nav-frontend-js-utils": "^1.0.16",
-        "nav-frontend-knapper": "^1.0.37",
-        "nav-frontend-knapper-style": "^0.3.32",
-        "nav-frontend-lenkepanel": "^1.0.34",
-        "nav-frontend-lenkepanel-style": "^0.3.27",
-        "nav-frontend-lenker": "^1.0.53",
-        "nav-frontend-lenker-style": "^0.2.39",
-        "nav-frontend-lukknapp": "^1.0.23",
-        "nav-frontend-lukknapp-style": "^0.2.21",
-        "nav-frontend-modal": "^1.0.31",
-        "nav-frontend-modal-style": "^0.3.31",
-        "nav-frontend-paneler": "^1.0.21",
-        "nav-frontend-paneler-style": "^0.3.31",
-        "nav-frontend-popover": "0.0.45",
-        "nav-frontend-popover-style": "0.0.14",
-        "nav-frontend-skjema": "^1.0.78",
-        "nav-frontend-skjema-style": "^1.0.48",
-        "nav-frontend-spinner": "^1.0.20",
-        "nav-frontend-spinner-style": "^0.2.5",
-        "nav-frontend-stegindikator": "0.0.36",
-        "nav-frontend-stegindikator-style": "^1.0.25",
-        "nav-frontend-tabell-style": "^0.2.23",
-        "nav-frontend-tabs": "0.0.36",
-        "nav-frontend-tabs-style": "0.0.22",
-        "nav-frontend-typografi": "^2.0.37",
-        "nav-frontend-typografi-style": "^1.0.31",
-        "nav-frontend-veileder": "^2.0.13",
-        "nav-frontend-veileder-style": "^2.0.10",
-        "nav-frontend-veilederpanel": "^0.1.18",
-        "nav-frontend-veilederpanel-style": "^0.0.21",
-        "node-cache": "4.2.0",
+        "moment": "^2.29.1",
+        "nav-datovelger": "^12.1.1",
+        "nav-frontend-alertstriper": "^4.0.1",
+        "nav-frontend-alertstriper-style": "^3.0.1",
+        "nav-frontend-chevron": "^1.0.30",
+        "nav-frontend-chevron-style": "^1.0.4",
+        "nav-frontend-core": "^6.0.1",
+        "nav-frontend-ekspanderbartpanel": "^4.0.1",
+        "nav-frontend-ekspanderbartpanel-style": "^2.0.1",
+        "nav-frontend-etiketter": "^3.0.1",
+        "nav-frontend-etiketter-style": "^2.0.1",
+        "nav-frontend-grid": "^2.0.1",
+        "nav-frontend-grid-style": "^1.0.2",
+        "nav-frontend-hjelpetekst": "^3.1.1",
+        "nav-frontend-hjelpetekst-style": "^3.0.1",
+        "nav-frontend-ikoner-assets": "^3.0.1",
+        "nav-frontend-ikonknapper": "2.0.2",
+        "nav-frontend-js-utils": "^1.0.19",
+        "nav-frontend-knapper": "^3.0.2",
+        "nav-frontend-knapper-style": "^2.0.2",
+        "nav-frontend-lenkepanel": "^2.0.1",
+        "nav-frontend-lenkepanel-style": "^2.0.1",
+        "nav-frontend-lenker": "^2.0.1",
+        "nav-frontend-lenker-style": "^2.0.1",
+        "nav-frontend-lukknapp": "^2.0.1",
+        "nav-frontend-lukknapp-style": "^2.0.1",
+        "nav-frontend-modal": "^2.0.1",
+        "nav-frontend-modal-style": "^2.0.1",
+        "nav-frontend-paneler": "^3.0.1",
+        "nav-frontend-paneler-style": "^2.0.1",
+        "nav-frontend-popover": "2.0.2",
+        "nav-frontend-popover-style": "2.0.1",
+        "nav-frontend-skjema": "^4.0.1",
+        "nav-frontend-skjema-style": "^3.0.1",
+        "nav-frontend-spinner": "^3.0.1",
+        "nav-frontend-spinner-style": "^1.0.2",
+        "nav-frontend-stegindikator": "2.0.1",
+        "nav-frontend-stegindikator-style": "^2.0.1",
+        "nav-frontend-tabell-style": "^2.0.2",
+        "nav-frontend-tabs": "2.0.1",
+        "nav-frontend-tabs-style": "2.0.1",
+        "nav-frontend-typografi": "^4.0.1",
+        "nav-frontend-typografi-style": "^2.0.1",
+        "nav-frontend-veileder": "^3.0.1",
+        "nav-frontend-veileder-style": "^3.0.1",
+        "nav-frontend-veilederpanel": "^2.0.1",
+        "nav-frontend-veilederpanel-style": "^2.0.1",
+        "node-cache": "5.1.2",
         "node-fetch": "2.6.1",
         "prop-types": "^15.7.2",
-        "react": "^16.14.0",
-        "react-app-polyfill": "^0.2.1",
-        "react-collapse": "^5.0.1",
-        "react-cookie": "^4.0.3",
-        "react-copy-to-clipboard": "^5.0.1",
-        "react-day-picker": "^7.4.0",
-        "react-dom": "^16.14.0",
-        "react-intl": "^2.8.0",
-        "react-loading-skeleton": "^2.1.1",
-        "react-maskedinput": "^4.0.1",
-        "react-modal": "^3.11.2",
-        "react-motion": "^0.5.2",
-        "react-responsive": "^8.0.3",
-        "react-router-dom": "^5.1.2",
-        "react-select": "^3.1.0",
-        "url-search-params-polyfill": "^7.0.1"
+        "react": "^17.0.2",
+        "react-app-polyfill": "^2.0.0",
+        "react-collapse": "^5.1.0",
+        "react-cookie": "^4.1.1",
+        "react-copy-to-clipboard": "^5.0.4",
+        "react-day-picker": "^7.4.10",
+        "react-dom": "^17.0.2",
+        "react-intl": "^5.20.10",
+        "react-loading-skeleton": "^2.2.0",
+        "react-modal": "^3.14.3",
+        "react-responsive": "^8.2.0",
+        "react-router-dom": "^5.2.0",
+        "react-select": "^4.3.1",
+        "url-search-params-polyfill": "^8.1.1"
     },
     "devDependencies": {
-        "@craco/craco": "^5.6.1",
-        "@sentry/cli": "^1.60.1",
-        "@types/chai": "^4.2.4",
-        "@types/classnames": "^2.2.7",
-        "@types/enzyme": "^3.10.3",
-        "@types/enzyme-adapter-react-16": "^1.0.5",
-        "@types/enzyme-react-intl": "^2.0.0",
-        "@types/fetch-mock": "^7.2.2",
-        "@types/jest": "^23.3.14",
-        "@types/node": "^10.17.4",
-        "@types/react": "^16.9.11",
-        "@types/react-collapse": "^4.0.2",
-        "@types/react-copy-to-clipboard": "^4.2.6",
+        "@craco/craco": "^6.2.0",
+        "@sentry/cli": "^1.68.0",
+        "@types/chai": "^4.2.21",
+        "@types/classnames": "^2.3.0",
+        "@types/enzyme": "^3.10.9",
+        "@types/fetch-mock": "^7.3.5",
+        "@types/jest": "^27.0.1",
+        "@types/node": "^16.7.2",
+        "@types/react": "^17.0.19",
+        "@types/react-collapse": "^5.0.1",
+        "@types/react-copy-to-clipboard": "^5.0.1",
         "@types/react-day-picker": "^5.3.0",
-        "@types/react-dom": "^16.9.3",
-        "@types/react-intl": "^2.3.16",
-        "@types/react-maskedinput": "^4.0.4",
-        "@types/react-responsive": "^8.0.2",
-        "@types/react-router-dom": "^5.1.2",
-        "@types/react-select": "^3.1.2",
-        "chai": "^4.2.0",
-        "craco-less": "^1.14.4",
-        "cross-env": "^6.0.3",
-        "enzyme": "^3.10.0",
-        "enzyme-adapter-react-16": "^1.15.1",
-        "enzyme-react-intl": "^2.0.6",
-        "fetch-mock": "^7.7.3",
-        "glob": "^7.1.5",
-        "husky": "^3.1.0",
-        "less": "^3.8.1",
-        "less-watch-compiler": "^1.13.0",
+        "@types/react-dom": "^17.0.9",
+        "@types/react-intl": "^2.3.18",
+        "@types/react-maskedinput": "^4.0.5",
+        "@types/react-responsive": "^8.0.3",
+        "@types/react-router-dom": "^5.1.8",
+        "@types/react-select": "^4.0.17",
+        "chai": "^4.3.4",
+        "craco-less": "^1.19.0",
+        "cross-env": "^7.0.3",
+        "enzyme": "^3.11.0",
+        "fetch-mock": "^9.11.0",
+        "glob": "^7.1.7",
+        "husky": "^7.0.2",
+        "less": "^4.1.1",
+        "less-watch-compiler": "^1.16.2",
         "npm-run-all": "^4.1.5",
-        "prettier": "^1.19.1",
-        "pretty-quick": "^2.0.1",
-        "react-scripts": "^3.4.3",
-        "svgo": "1.3.2",
+        "prettier": "^2.3.2",
+        "pretty-quick": "^3.1.1",
+        "react-scripts": "^4.0.3",
+        "svgo": "2.4.0",
         "tslint": "^5.20.1",
         "tslint-config-prettier": "^1.18.0",
         "tslint-react": "^4.1.0",
-        "typescript": "^3.7.2",
-        "webpack-bundle-analyzer": "^3.6.0"
+        "typescript": "^4.4.2",
+        "webpack-bundle-analyzer": "^4.4.2"
     },
     "browserslist": [
         ">0.2%",
