--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "intl": "^1.2.5",
         "jsdom": "^17.0.0",
         "lodash.debounce": "^4.0.8",
+        "lodash.isequal": "^4.5.0",
         "lodash.throttle": "^4.1.1",
         "moment": "^2.29.1",
         "nav-datovelger": "^12.1.1",
