--- a/package.json
+++ b/package.json
@@ -115,6 +115,8 @@
     "devDependencies": {
         "@craco/craco": "^6.2.0",
         "@sentry/cli": "^1.68.0",
+        "@testing-library/jest-dom": "^5.15.1",
+        "@testing-library/react": "^12.1.2",
         "@types/chai": "^4.2.21",
         "@types/classnames": "^2.3.0",
         "@types/enzyme": "^3.10.9",
@@ -138,6 +140,7 @@
         "fetch-mock": "^9.11.0",
         "glob": "^7.1.7",
         "husky": "^7.0.2",
+        "jest-dom": "^4.0.0",
         "less": "^4.1.1",
         "less-watch-compiler": "^1.16.2",
         "npm-run-all": "^4.1.5",
