--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "dependencies": {
         "@formatjs/intl-pluralrules": "^4.1.3",
         "@formatjs/intl-relativetimeformat": "^9.2.3",
-        "@navikt/bedriftsmeny": "^3.4.0",
+        "@navikt/bedriftsmeny": "^3.5.0",
+        "@navikt/arbeidsgiver-notifikasjon-widget": "^0.1.5",
         "@navikt/ds-icons": "^0.5.2",
         "@navikt/fnrvalidator": "^1.1.4",
         "@navikt/navspa": "^3.0.2",
