--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dependencies": {
         "@formatjs/intl-pluralrules": "^4.1.3",
         "@formatjs/intl-relativetimeformat": "^9.2.3",
+        "@navikt/arbeidsgiver-notifikasjon-widget": "^1.0.1",
         "@navikt/bedriftsmeny": "^3.5.2",
         "@navikt/ds-icons": "^0.5.2",
         "@navikt/fnrvalidator": "^1.1.4",
