--- a/.github/workflows/bygg-og-deploy-master.yml
+++ b/.github/workflows/bygg-og-deploy-master.yml
@@ -58,6 +58,24 @@ jobs:
           docker build --tag ${IMAGE} .
           docker push ${IMAGE}
 
+
+  deploy-dev-gcp:
+    name: Deploy til dev-gcp
+    runs-on: ubuntu-latest
+    needs: bygg
+    steps:
+      - name: Sjekk ut kode
+        uses: actions/checkout@v2
+
+      - name: Deploy til dev-gcp
+        uses: nais/deploy/actions/deploy@v1
+        env:
+          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
+          CLUSTER: dev-gcp
+          RESOURCE: nais/nais-gcp.yaml
+          PRINT_PAYLOAD: true
+          VARS: nais/dev-gcp.yml
+
   deploy-dev-fss:
     name: Deploy til dev-fss
     runs-on: ubuntu-latest
