tester tokenx (token exhange fra sidecar til tiltak-proxy) for gcp deployment.
Co-authored-by: Mats Bolstad <mats.bolstad@nav.no>

--- a/nais/nais-gcp.yaml
+++ b/nais/nais-gcp.yaml
@@ -30,6 +30,8 @@ spec:
           value: 'https://www.nav.no/dekoratoren/?context=arbeidsgiver&redirectToApp=true&level=Level4&language=nb'
         - name: STILLINGSTITLER_URL
           value: '{{{stillingstitler-url}}}'
+        - name: API_AUDIENCE
+          value: '{{{api-audience}}}'
     idporten:
         enabled: true
         sidecar:
