--- a/nais/dev-gcp.yml
+++ b/nais/dev-gcp.yml
@@ -3,3 +3,4 @@
 "selvbetjening-login-url": "https://loginservice.dev.nav.no/login?redirect=https://tiltaksgjennomforing.dev.nav.no/tiltaksgjennomforing"
 "logout-url": "https://loginservice.dev.nav.no/slo"
 "stillingstitler-url": "https://tiltak-stillingstitler.dev-gcp.nais.io"
+"api-audience": "dev-fss:arbeidsgiver:tiltak-proxy"
