enabler tokenx i nais.yaml som tilgjengeliggjør div mijøvariabler

--- a/nais/nais-gcp.yaml
+++ b/nais/nais-gcp.yaml
@@ -32,6 +32,8 @@ spec:
           value: '{{{stillingstitler-url}}}'
         - name: API_AUDIENCE
           value: '{{{api-audience}}}'
+    tokenx:
+      enabled: true
     idporten:
         enabled: true
         sidecar:
