--- a/package.json
+++ b/package.json
@@ -6,8 +6,6 @@
     "scripts": {
         "build": "cross-env GIT_COMMIT_HASH=$(git log -n 1 --pretty=format:'%h') craco build",
         "release": "cross-env GIT_COMMIT_HASH=$(git log -n 1 --pretty=format:'%h') node sentry.js",
-        "mock": "cross-env REACT_APP_MOCK=true npm start",
-        "heroku": "node heroku.js",
         "server": "node server.js",
         "start": "craco start",
         "start-ekstern": "cross-env ENABLE_EXTERNAL_MENU=true craco start",
@@ -111,6 +109,7 @@
         "react-responsive": "^8.2.0",
         "react-router-dom": "^5.2.0",
         "react-select": "^4.3.1",
+        "swr": "^1.1.1",
         "url-search-params-polyfill": "^8.1.1"
     },
     "devDependencies": {
