idporten autologin gcp

--- a/nais/nais-gcp.yaml
+++ b/nais/nais-gcp.yaml
@@ -40,7 +40,7 @@ spec:
           enabled: true
           level: Level4
           locale: nb
-          autoLogin: false
+          autoLogin: true
           errorPath: ""
     accessPolicy:
       outbound:
