--- a/package.json
+++ b/package.json
@@ -110,7 +110,9 @@
         "react-router-dom": "^5.2.0",
         "react-select": "^4.3.1",
         "swr": "^1.1.1",
-        "url-search-params-polyfill": "^8.1.1"
+        "url-search-params-polyfill": "^8.1.1",
+        "express-http-proxy": "1.6.2",
+        "openid-client": "3.7.2"
     },
     "devDependencies": {
         "@craco/craco": "^6.2.0",
