--- a/.github/workflows/bygg-og-deploy-master.yml
+++ b/.github/workflows/bygg-og-deploy-master.yml
@@ -76,6 +76,23 @@ jobs:
           PRINT_PAYLOAD: true
           VARS: nais/dev-gcp.yml
 
+  deploy-prod-gcp:
+    name: Deploy til prod-gcp
+    runs-on: ubuntu-latest
+    needs: bygg
+    steps:
+      - name: Sjekk ut kode
+        uses: actions/checkout@v2
+
+      - name: Deploy til prod-gcp
+        uses: nais/deploy/actions/deploy@v1
+        env:
+          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
+          CLUSTER: prod-gcp
+          RESOURCE: nais/nais-gcp.yaml
+          PRINT_PAYLOAD: true
+          VARS: nais/prod-gcp.yml
+
   deploy-dev-fss:
     name: Deploy til dev-fss
     runs-on: ubuntu-latest
