--- a/nais/dev-gcp.yml
+++ b/nais/dev-gcp.yml
@@ -1,6 +1,7 @@
 "ingress": "https://tiltaksgjennomforing.dev.nav.no"
 "api-gw-url": "https://tiltak-proxy.dev-fss-pub.nais.io"
-"selvbetjening-login-url": "https://loginservice.dev.nav.no/login?redirect=https://tiltaksgjennomforing.dev.nav.no/tiltaksgjennomforing"
-"logout-url": "https://loginservice.dev.nav.no/slo"
+"selvbetjening-login-url": "/oauth2/login"
+"logout-url": "/oauth2/logout"
 "stillingstitler-url": "https://tiltak-stillingstitler.dev-gcp.nais.io"
 "api-audience": "dev-fss:arbeidsgiver:tiltak-proxy"
+"proxy-cluster": "dev-fss"
