--- a/nais/dev-gcp.yml
+++ b/nais/dev-gcp.yml
@@ -2,6 +2,6 @@
 "api-gw-url": "https://tiltak-proxy.dev-fss-pub.nais.io"
 "selvbetjening-login-url": "/oauth2/login"
 "logout-url": "/oauth2/logout"
-"stillingstitler-url": "https://tiltak-stillingstitler.dev-gcp.nais.io"
+"stillingstitler-url": "http://tiltak-stillingstitler"
 "api-audience": "dev-fss:arbeidsgiver:tiltak-proxy"
 "proxy-cluster": "dev-fss"
