tokenx: deployer til gcp, bytter token til proxy (#932)
* lagt til tokenx - bytte av innkommende token til token for proxy

Co-authored-by: Mats Bolstad <mats.bolstad@nav.no>

* outbound rule mot tiltak-stillingstitler og går mot app istedenfor ingress fra gcp

Co-authored-by: Mats Bolstad <mats.bolstad@nav.no>

Co-authored-by: Mats Bolstad <mats.bolstad@nav.no>

--- a/nais/dev-gcp.yml
+++ b/nais/dev-gcp.yml
@@ -1,6 +1,7 @@
 "ingress": "https://tiltaksgjennomforing.dev.nav.no"
 "api-gw-url": "https://tiltak-proxy.dev-fss-pub.nais.io"
-"selvbetjening-login-url": "https://loginservice.dev.nav.no/login?redirect=https://tiltaksgjennomforing.dev.nav.no/tiltaksgjennomforing"
-"logout-url": "https://loginservice.dev.nav.no/slo"
-"stillingstitler-url": "https://tiltak-stillingstitler.dev-gcp.nais.io"
+"selvbetjening-login-url": "/oauth2/login"
+"logout-url": "/oauth2/logout"
+"stillingstitler-url": "http://tiltak-stillingstitler"
 "api-audience": "dev-fss:arbeidsgiver:tiltak-proxy"
+"proxy-cluster": "dev-fss"
