Host til proxy uten https://

--- a/nais/nais-gcp.yaml
+++ b/nais/nais-gcp.yaml
@@ -52,4 +52,4 @@ spec:
         - application: tiltak-stillingstitler
           namespace: arbeidsgiver
       external:
-        - host: https://tiltak-proxy.{{{proxy-cluster}}}-pub.nais.io
+        - host: tiltak-proxy.{{{proxy-cluster}}}-pub.nais.io
