--- a/.github/workflows/deploy-branch.yml
+++ b/.github/workflows/deploy-branch.yml
@@ -49,7 +49,7 @@ jobs:
           CLUSTER: dev-gcp
           RESOURCE: nais/nais-gcp.yaml
           PRINT_PAYLOAD: true
-          VARS: nais/dev-gcp.json
+          VARS: nais/dev-gcp.yml
           REF: ${{ env.COMMIT }}
           IMAGE: ${{ env.IMAGE }}
 
