--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
         "openid-client": "3.7.2"
     },
     "devDependencies": {
+        "react-error-overlay": "6.0.9",
         "@craco/craco": "^6.2.0",
         "@sentry/cli": "^1.68.0",
         "@testing-library/jest-dom": "^5.15.1",
