--- a/nais/dev-gcp-intern.yml
+++ b/nais/dev-gcp-intern.yml
@@ -1,7 +1,7 @@
-"ingress": "https://tiltaksgjennomforing.dev.nav.no"
+"ingress": "https://tiltaksgjennomforing.dev.intern.nav.no"
 "api-gw-url": "https://tiltak-proxy.dev-fss-pub.nais.io"
 "login-url": "/oauth2/login"
 "logout-url": "/oauth2/logout"
 "stillingstitler-url": "http://tiltak-stillingstitler"
-"api-audience": "dev-fss:arbeidsgiver:tiltak-proxy"
+"api-scope": "api://dev-fss.arbeidsgiver.tiltak-proxy/.default"
 "proxy-cluster": "dev-fss"
