Endret yml til yaml

--- a/.github/workflows-old/bygg-og-deploy-master.yml
+++ b/.github/workflows-old/bygg-og-deploy-master.yml
@@ -72,7 +72,7 @@ jobs:
           CLUSTER: dev-gcp
           RESOURCE: nais/nais-gcp-intern.yaml
           PRINT_PAYLOAD: true
-          VARS: nais/dev-gcp-intern.yml
+          VARS: nais/dev-gcp-intern.yaml
 
   deploy-dev-gcp-ekstern:
     name: Deploy til dev-gcp ekstern
@@ -88,7 +88,7 @@ jobs:
           CLUSTER: dev-gcp
           RESOURCE: nais/nais-gcp-ekstern.yaml
           PRINT_PAYLOAD: true
-          VARS: nais/dev-gcp-ekstern.yml
+          VARS: nais/dev-gcp-ekstern.yaml
 
   deploy-prod-gcp-intern:
     name: Deploy til prod-gcp intern
@@ -104,7 +104,7 @@ jobs:
           CLUSTER: prod-gcp
           RESOURCE: nais/nais-gcp-intern.yaml
           PRINT_PAYLOAD: true
-          VARS: nais/prod-gcp-intern.yml
+          VARS: nais/prod-gcp-intern.yaml
 
   deploy-prod-gcp-ekstern:
     name: Deploy til prod-gcp ekstern
@@ -120,7 +120,7 @@ jobs:
           CLUSTER: prod-gcp
           RESOURCE: nais/nais-gcp-ekstern.yaml
           PRINT_PAYLOAD: true
-          VARS: nais/prod-gcp-ekstern.yml
+          VARS: nais/prod-gcp-ekstern.yaml
 
   deploy-labs-gcp:
     name: Deploy til labs-gcp
