--- a/.github/workflows-old/deploy-branch.yml
+++ b/.github/workflows-old/deploy-branch.yml
@@ -49,7 +49,7 @@ jobs:
           CLUSTER: dev-gcp
           RESOURCE: nais/nais-gcp-intern.yaml
           PRINT_PAYLOAD: true
-          VARS: nais/dev-gcp-intern.yml
+          VARS: nais/dev-gcp-intern.yaml
           REF: ${{ env.COMMIT }}
           IMAGE: ${{ env.IMAGE }}
 
