lagt til mer azureConfig som manglet og oppdatert ingresser til intern-sidene

--- a/nais/dev-gcp-ekstern.yaml
+++ b/nais/dev-gcp-ekstern.yaml
@@ -5,3 +5,4 @@
 "stillingstitler-url": "http://tiltak-stillingstitler"
 "api-audience": "dev-fss:arbeidsgiver:tiltak-proxy"
 "proxy-cluster": "dev-fss"
+"aad-redirect-url": "https://tiltaksgjennomforing.dev.nav.no/oauth2/callback"
