--- a/nais/prod-gcp-intern.yaml
+++ b/nais/prod-gcp-intern.yaml
@@ -1,7 +1,8 @@
-"ingress": "https://arbeidsgiver.nav.no/tiltaksgjennomforing"
+"ingress": "https://arbeidsgiver.intern.nav.no/tiltaksgjennomforing"
 "api-gw-url": "https://tiltak-proxy.prod-fss-pub.nais.io"
 "login-url": "/tiltaksgjennomforing/oauth2/login"
 "logout-url": "/tiltaksgjennomforing/oauth2/logout"
 "stillingstitler-url": "http://tiltak-stillingstitler"
 "api-scope": "api://prod-fss.arbeidsgiver.tiltak-proxy/.default"
 "proxy-cluster": "prod-fss"
+"aad-redirect-url": "https://arbeidsgiver.intern.nav.no/tiltaksgjennomforing/oauth2/callback"
