--- a/nais/nais-gcp-ekstern.yaml
+++ b/nais/nais-gcp-ekstern.yaml
@@ -32,6 +32,8 @@ spec:
       value: '{{{stillingstitler-url}}}'
     - name: API_AUDIENCE
       value: '{{{api-audience}}}'
+    - name: AAD_REDIRECT_URL
+      value: {{{aad-redirect-url}}}
   tokenx:
     enabled: true
   idporten:
