Lagt til navident i extra claims for azure

--- a/nais/nais-gcp-intern.yaml
+++ b/nais/nais-gcp-intern.yaml
@@ -40,6 +40,9 @@ spec:
     application:
       tenant: trygdeetaten.no
       enabled: true
+      claims:
+        extra:
+          - NAVident
     sidecar:
       enabled: true
   accessPolicy:
