Navident som string i extra claim

--- a/nais/nais-gcp-intern.yaml
+++ b/nais/nais-gcp-intern.yaml
@@ -41,7 +41,7 @@ spec:
       enabled: true
       claims:
         extra:
-          - NAVident
+          - "NAVident"
     sidecar:
       enabled: true
   accessPolicy:
