--- a/nais/nais-gcp-ekstern.yaml
+++ b/nais/nais-gcp-ekstern.yaml
@@ -26,6 +26,8 @@ spec:
       value: '{{{logout-url}}}'
     - name: ENABLE_EXTERNAL_MENU
       value: 'true'
+    - name: ENABLE_INTERNAL_MENU
+      value: 'false'
     - name: DECORATOR_EXTERNAL_URL
       value: 'https://www.nav.no/dekoratoren/?context=arbeidsgiver&redirectToApp=true&level=Level4&language=nb'
     - name: STILLINGSTITLER_URL
