--- a/nais/nais-gcp-ekstern.yaml
+++ b/nais/nais-gcp-ekstern.yaml
@@ -25,9 +25,9 @@ spec:
     - name: LOGOUT_URL
       value: '{{{logout-url}}}'
     - name: ENABLE_EXTERNAL_MENU
-      value: 'true'
+      value: true
     - name: ENABLE_INTERNAL_MENU
-      value: 'false'
+      value: false
     - name: DECORATOR_EXTERNAL_URL
       value: 'https://www.nav.no/dekoratoren/?context=arbeidsgiver&redirectToApp=true&level=Level4&language=nb'
     - name: STILLINGSTITLER_URL
