--- a/nais/nais-gcp-intern.yaml
+++ b/nais/nais-gcp-intern.yaml
@@ -25,11 +25,13 @@ spec:
     - name: LOGOUT_URL
       value: '{{{logout-url}}}'
     - name: ENABLE_EXTERNAL_MENU
-      value: 'false'
+      value: false
     - name: ENABLE_INTERNAL_MENU
-      value: 'true'
-    - name: DECORATOR_EXTERNAL_URL
-      value: 'https://www.nav.no/dekoratoren/?context=arbeidsgiver&redirectToApp=true&level=Level4&language=nb'
+      value: true
+    - name: DECORATOR_INTERNAL_SCRIPT
+      value: '{{{decorator-internal-script}}}'
+    - name: DECORATOR_INTERNAL_STYLING
+      value: '{{{decorator-internal-styling}}}'
     - name: STILLINGSTITLER_URL
       value: http://tiltak-stillingstitler
     - name: API_SCOPE
